--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <video controls="" name="media">
-  <source src="https://amtvusdvr.tulix.tv/am3abr/index.m3u8" type="application/vnd.apple.mpegurl">
+  <source src="https://ncdn-y1-w6.teamcloud.am/live/eds/Geghama/SAF-HLS/Geghama.m3u8" type="application/vnd.apple.mpegurl">
 </video>
 </body>
 </html>
